--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_signin-signup.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_signin-signup.less
@@ -55,9 +55,9 @@
             padding: 10px;
             .reg-login {
                 font-family: open-sans;
-                margin: 15px 0;
+                margin: 12px 0;
                 color: @quiz-link-color3;
-                & > h3 {
+                & > h4 {
                     margin: 0;
                 }
             }
